added home template and styles

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -4,4 +4,6 @@
 @import 'partials/text-and-headlines';
 @import 'partials/loading';
 @import 'partials/common';
+@import 'partials/header';
+@import 'partials/home';
 @import 'partials/globals/modifiers';
