--- a/public/styles/partials/globals/_variables.scss
+++ b/public/styles/partials/globals/_variables.scss
@@ -1,3 +1,10 @@
 // fonts
+$headers: 'Metal Mania', cursive;
+$primaryFont: 'Open Sans', sans-serif;
 
 // colors
+$lightGrey: #cfcfcf;
+$loading: rgba(0,0,0,.5);
+$orange: #D75C37;
+$slate: #303438;
+$sky: #6991AC;
