--- a/public/styles/partials/_common.scss
+++ b/public/styles/partials/_common.scss
@@ -1,8 +1,17 @@
 body {
-  background: $lightGrey;
+  background: $slate;
 }
 
-header {
-  background: $slate;
-  margin-bottom: 1rem;
+.main-wrapper {
+  background: $lightGrey;
+  margin: 0 auto;
+  width: 85%;
+}
+
+main {
+  background: $lightGrey;
+
+  .content-container {
+    padding: 2rem;
+  }
 }
