added css stylings to bands template

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -8,4 +8,5 @@
 @import 'partials/home';
 @import 'partials/genres';
 @import 'partials/labels';
+@import 'partials/bands';
 @import 'partials/globals/modifiers';
