--- a/public/styles/partials/_bands.scss
+++ b/public/styles/partials/_bands.scss
@@ -1,14 +1,22 @@
 .band-container-list {
   height: 100%;
   width: 100%;
-  border: 1px solid red;
   flex-direction: column;
   justify-content: center;
 
   .band-container {
+    background: $lightGrey;
     width: 100%;
     border: 1px solid black;
     flex-direction: column;
+    &:nth-of-type(even) {
+      background: $sky;
+    }
+    &:hover {
+
+      box-shadow: -10px 10px 5px $loading;
+      z-index: 2;
+    }
 
     img {
       width: 20%;
@@ -20,7 +28,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: space-around;
-      width: 70%;
+      width: 100%;
       .band-name {
         font-size: 4rem;
       }
@@ -38,11 +46,14 @@
       margin: 0;
 
       .bio-container {
-        border: 1px solid black;
+        // border: 1px solid black;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         margin: 0;
+        &:nth-of-type(odd) {
+          background: $sky;
+        }
 
         //  box-shadow: 10px 10px 5px #888888;
         .band-members {
@@ -64,7 +75,7 @@
 
         .album-image-container {
           flex-direction: row;
-          border: 1px solid black;
+          // border: 1px solid black;
           width: 100%;
 
           .album-one-image {
@@ -84,7 +95,7 @@
           .other-album-images {
             position: relative;
             flex-wrap: wrap;
-            border: 1px solid black;
+            // border: 1px solid black;
             float: right;
             width: 50%;
 
