--- a/public/styles/partials/_bands.scss
+++ b/public/styles/partials/_bands.scss
@@ -7,13 +7,12 @@
   .band-container {
     background: $lightGrey;
     width: 100%;
-    border: 1px solid black;
+    // border: 1px solid black;
     flex-direction: column;
     &:nth-of-type(even) {
       background: $sky;
     }
     &:hover {
-
       box-shadow: -10px 10px 5px $loading;
       z-index: 2;
     }
@@ -21,8 +20,6 @@
     img {
       width: 20%;
       height: 20%;
-      border: 1px solid black;
-      // padding: 5px;
     }
     .display-name-container {
       flex-direction: column;
@@ -46,7 +43,6 @@
       margin: 0;
 
       .bio-container {
-        // border: 1px solid black;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -55,7 +51,6 @@
           background: $sky;
         }
 
-        //  box-shadow: 10px 10px 5px #888888;
         .band-members {
           padding-top: 2rem;
         }
@@ -85,25 +80,33 @@
             margin: 0;
 
             img {
-              border: 1px solid black;
               height: 100%;
               width: 100%;
               margin: 0;
+              &:hover {
+                box-shadow: -10px 10px 5px $loading;
+                z-index: 3;
+                transform: scale(1.05);
+              }
             }
           }
 
           .other-album-images {
             position: relative;
             flex-wrap: wrap;
-            // border: 1px solid black;
             float: right;
             width: 50%;
 
             img {
-              border: 1px solid black;
               height: 50%;
               width: 50%;
               margin: 0;
+              &:hover {
+                box-shadow: -10px 10px 5px $loading;
+                z-index: 3;
+                transform: scale(1.05);
+
+              }
             }
           }
         }
