added all add/edit/delete event listeners and form elements

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -7,5 +7,6 @@
 @import 'partials/header';
 @import 'partials/home';
 @import 'partials/genres';
+@import 'partials/bands';
 @import 'partials/labels';
 @import 'partials/globals/modifiers';
