--- a/public/styles/partials/_bands.scss
+++ b/public/styles/partials/_bands.scss
@@ -1,3 +1,41 @@
+.band-list-container {
+  .add-band-form {
+    align-items: center;
+    border: 1px solid $slate;
+    clear: both;
+    height: 300px;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding: 2rem 0;
+    width: 50%;
+
+    input {
+      width: 85%;
+
+      &[type="submit"] {
+        background: $slate;
+
+        &:hover {
+          cursor: pointer;
+        }
+        &:active {
+          background: $lightGrey;
+          border: 1px solid $slate;
+        }
+      }
+    }
+    .cancel {
+      background: none;
+      border: none;
+
+      &:hover{
+        cursor: pointer;
+      }
+    }
+  }
+}
+
 .band-container-list {
   height: 100%;
   width: 100%;
@@ -23,6 +61,10 @@
       width: 70%;
       .band-name {
         font-size: 4rem;
+
+        &:hover {
+          cursor: pointer;
+        }
       }
 
       .label-home-container {
@@ -95,6 +137,40 @@
               margin: 0;
             }
           }
+        }
+      }
+    }
+  }
+}
+
+.artist {
+  .actions {
+    button {
+      background: none;
+      border: none;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+
+  .edit-artist-form {
+    margin: 1rem 1rem 0 0;
+    input {
+      display: block;
+      margin-bottom: .5rem;
+
+      &[type="submit"] {
+        background: $slate;
+        border-radius: 0;
+
+        &:hover {
+          cursor: pointer;
+        }
+        &:active {
+          background: $lightGrey;
+          border: $slate;
         }
       }
     }
