--- a/public/styles/partials/_genres.scss
+++ b/public/styles/partials/_genres.scss
@@ -10,12 +10,24 @@
       border: none;
     }
   }
+
+  input {
+    &[type="submit"] {
+      background: $slate;
+      border-radius: 0;
+      margin-left: .5rem;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
 }
 
 .genres-list {
   margin: 1rem auto auto 3rem;
   text-align: left;
-  width: 50%;
+  width: 30%;
 
   .genre-bands {
     margin-bottom: 1rem;
@@ -30,6 +42,32 @@
       span {
         margin-left: .5rem;
       }
+    }
+  }
+
+  .edit-genre-form {
+    margin-top: .5rem;
+    padding-left: 1rem;
+  }
+}
+
+.add-genre-form {
+
+  .cancel {
+    background: none;
+    border: none;
+    margin-left: .5rem;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
+.genre-item {
+  button {
+    &:hover {
+      cursor: pointer;
     }
   }
 }
