--- a/public/styles/partials/_labels.scss
+++ b/public/styles/partials/_labels.scss
@@ -1,6 +1,5 @@
 .labels-container {
   margin: 2rem auto 0 auto;
-  padding-left: 15rem;
   text-align: center;
   width: 85%;
 }
@@ -18,6 +17,17 @@
     flex-direction: column;
     justify-content: center;
     width: 80%;
+
+    input {
+      &[type="submit"] {
+        background: $slate;
+        border-radius: 0;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+    }
   }
   .actions {
     padding-top: 1rem;
@@ -44,5 +54,42 @@
 
   &:hover {
     cursor: pointer;
+  }
+}
+
+.add-label-form {
+  align-items: center;
+  border: 1px solid $slate;
+  clear: both;
+  height: 300px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 2rem 0;
+  width: 50%;
+
+  input {
+    width: 85%;
+
+    &[type="submit"] {
+      background: $slate;
+
+      &:hover {
+        cursor: pointer;
+      }
+      &:active {
+        background: $lightGrey;
+        border: 1px solid $slate;
+      }
+    }
+  }
+
+  .cancel {
+    background: none;
+    border: none;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
