--- a/public/styles/partials/_common.scss
+++ b/public/styles/partials/_common.scss
@@ -8,6 +8,14 @@ body {
   width: 85%;
 }
 
+nav {
+  li {
+    &.active {
+      color: $lightGrey;
+    }
+  }
+}
+
 main {
   background: $lightGrey;
 
