--- a/public/styles/partials/_header.scss
+++ b/public/styles/partials/_header.scss
@@ -3,8 +3,10 @@ header {
   padding: 2rem 2rem 1rem 2rem;
 
   .home-btn {
-    &:hover {
-      cursor: pointer;
+    img {
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 }
