split out templates for better data integration and prepared app.js for api integration

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -172,6 +172,9 @@ body {
   margin: 0 auto;
   width: 85%; }
 
+nav li.active {
+  color: #cfcfcf; }
+
 main {
   background: #cfcfcf; }
   main .content-container {
@@ -187,7 +190,7 @@ main {
 header {
   background: #D75C37;
   padding: 2rem 2rem 1rem 2rem; }
-  header .home-btn:hover {
+  header .home-btn img:hover {
     cursor: pointer; }
 
 .logo {
@@ -297,22 +300,25 @@ nav ul {
 .band-container-list {
   height: 100%;
   width: 100%;
-  border: 1px solid red;
   flex-direction: column;
   justify-content: center; }
   .band-container-list .band-container {
+    background: #cfcfcf;
     width: 100%;
-    border: 1px solid black;
     flex-direction: column; }
+    .band-container-list .band-container:nth-of-type(even) {
+      background: #6991AC; }
+    .band-container-list .band-container:hover {
+      box-shadow: -10px 10px 5px rgba(0, 0, 0, 0.5);
+      z-index: 2; }
     .band-container-list .band-container img {
       width: 20%;
-      height: 20%;
-      border: 1px solid black; }
+      height: 20%; }
     .band-container-list .band-container .display-name-container {
       flex-direction: column;
       align-items: center;
       justify-content: space-around;
-      width: 70%; }
+      width: 100%; }
       .band-container-list .band-container .display-name-container .band-name {
         font-size: 4rem; }
         .band-container-list .band-container .display-name-container .band-name:hover {
@@ -326,11 +332,12 @@ nav ul {
     .band-container-list .band-container .dropdown {
       margin: 0; }
       .band-container-list .band-container .dropdown .bio-container {
-        border: 1px solid black;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         margin: 0; }
+        .band-container-list .band-container .dropdown .bio-container:nth-of-type(odd) {
+          background: #6991AC; }
         .band-container-list .band-container .dropdown .bio-container .band-members {
           padding-top: 2rem; }
         .band-container-list .band-container .dropdown .bio-container .bio {
@@ -342,7 +349,6 @@ nav ul {
         margin: 0; }
         .band-container-list .band-container .dropdown .albums-container .album-image-container {
           flex-direction: row;
-          border: 1px solid black;
           width: 100%; }
           .band-container-list .band-container .dropdown .albums-container .album-image-container .album-one-image {
             position: relative;
@@ -350,21 +356,26 @@ nav ul {
             width: 50%;
             margin: 0; }
             .band-container-list .band-container .dropdown .albums-container .album-image-container .album-one-image img {
-              border: 1px solid black;
               height: 100%;
               width: 100%;
               margin: 0; }
+              .band-container-list .band-container .dropdown .albums-container .album-image-container .album-one-image img:hover {
+                box-shadow: -10px 10px 5px rgba(0, 0, 0, 0.5);
+                z-index: 3;
+                transform: scale(1.05); }
           .band-container-list .band-container .dropdown .albums-container .album-image-container .other-album-images {
             position: relative;
             flex-wrap: wrap;
-            border: 1px solid black;
             float: right;
             width: 50%; }
             .band-container-list .band-container .dropdown .albums-container .album-image-container .other-album-images img {
-              border: 1px solid black;
               height: 50%;
               width: 50%;
               margin: 0; }
+              .band-container-list .band-container .dropdown .albums-container .album-image-container .other-album-images img:hover {
+                box-shadow: -10px 10px 5px rgba(0, 0, 0, 0.5);
+                z-index: 3;
+                transform: scale(1.05); }
 
 .artist .actions button {
   background: none;
@@ -424,7 +435,6 @@ nav ul {
   .add:hover {
     cursor: pointer; }
 
-<<<<<<< HEAD
 .add-label-form {
   align-items: center;
   border: 1px solid #303438;
@@ -449,85 +459,6 @@ nav ul {
     border: none; }
     .add-label-form .cancel:hover {
       cursor: pointer; }
-=======
-.band-container-list {
-  height: 100%;
-  width: 100%;
-  flex-direction: column;
-  justify-content: center; }
-  .band-container-list .band-container {
-    background: #cfcfcf;
-    width: 100%;
-    flex-direction: column; }
-    .band-container-list .band-container:nth-of-type(even) {
-      background: #6991AC; }
-    .band-container-list .band-container:hover {
-      box-shadow: -10px 10px 5px rgba(0, 0, 0, 0.5);
-      z-index: 2; }
-    .band-container-list .band-container img {
-      width: 20%;
-      height: 20%; }
-    .band-container-list .band-container .display-name-container {
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-around;
-      width: 100%; }
-      .band-container-list .band-container .display-name-container .band-name {
-        font-size: 4rem; }
-      .band-container-list .band-container .display-name-container .label-home-container {
-        flex-direction: row;
-        justify-content: space-around;
-        width: 100%; }
-        .band-container-list .band-container .display-name-container .label-home-container .basic-info {
-          text-decoration: none; }
-    .band-container-list .band-container .dropdown {
-      margin: 0; }
-      .band-container-list .band-container .dropdown .bio-container {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 0; }
-        .band-container-list .band-container .dropdown .bio-container:nth-of-type(odd) {
-          background: #6991AC; }
-        .band-container-list .band-container .dropdown .bio-container .band-members {
-          padding-top: 2rem; }
-        .band-container-list .band-container .dropdown .bio-container .bio {
-          padding: 2rem; }
-        .band-container-list .band-container .dropdown .bio-container .label-name {
-          padding-bottom: 2rem;
-          text-decoration: none; }
-      .band-container-list .band-container .dropdown .albums-container {
-        margin: 0; }
-        .band-container-list .band-container .dropdown .albums-container .album-image-container {
-          flex-direction: row;
-          width: 100%; }
-          .band-container-list .band-container .dropdown .albums-container .album-image-container .album-one-image {
-            position: relative;
-            float: left;
-            width: 50%;
-            margin: 0; }
-            .band-container-list .band-container .dropdown .albums-container .album-image-container .album-one-image img {
-              height: 100%;
-              width: 100%;
-              margin: 0; }
-              .band-container-list .band-container .dropdown .albums-container .album-image-container .album-one-image img:hover {
-                box-shadow: -10px 10px 5px rgba(0, 0, 0, 0.5);
-                z-index: 3;
-                transform: scale(1.05); }
-          .band-container-list .band-container .dropdown .albums-container .album-image-container .other-album-images {
-            position: relative;
-            flex-wrap: wrap;
-            float: right;
-            width: 50%; }
-            .band-container-list .band-container .dropdown .albums-container .album-image-container .other-album-images img {
-              height: 50%;
-              width: 50%;
-              margin: 0; }
-              .band-container-list .band-container .dropdown .albums-container .album-image-container .other-album-images img:hover {
-                box-shadow: -10px 10px 5px rgba(0, 0, 0, 0.5);
-                z-index: 3;
-                transform: scale(1.05); }
->>>>>>> 0d00a7e889717f07bff7e67866e6a3e95f33ce01
 
 .is-flex {
   display: flex; }
