--- a/public/styles/partials/_bands.scss
+++ b/public/styles/partials/_bands.scss
@@ -45,8 +45,8 @@
   .band-container {
     background: $lightGrey;
     width: 100%;
-    // border: 1px solid black;
     flex-direction: column;
+
     &:nth-of-type(even) {
       background: $sky;
     }
@@ -58,6 +58,7 @@
     img {
       width: 20%;
       height: 20%;
+      // padding: 5px;
     }
     .display-name-container {
       flex-direction: column;
@@ -93,6 +94,7 @@
           background: $sky;
         }
 
+        //  box-shadow: 10px 10px 5px #888888;
         .band-members {
           padding-top: 2rem;
         }
@@ -112,7 +114,6 @@
 
         .album-image-container {
           flex-direction: row;
-          // border: 1px solid black;
           width: 100%;
 
           .album-one-image {
@@ -147,7 +148,6 @@
                 box-shadow: -10px 10px 5px $loading;
                 z-index: 3;
                 transform: scale(1.05);
-
               }
             }
           }
