--- a/public/styles/partials/_bands.scss
+++ b/public/styles/partials/_bands.scss
@@ -114,41 +114,17 @@
 
         .album-image-container {
           flex-direction: row;
+          justify-content: center;
+          padding: 1rem;
           width: 100%;
 
-          .album-one-image {
-            position: relative;
-            float: left;
-            width: 50%;
-            margin: 0;
-
-            img {
-              height: 100%;
-              width: 100%;
-              margin: 0;
-              &:hover {
-                box-shadow: -10px 10px 5px $loading;
-                z-index: 3;
-                transform: scale(1.05);
-              }
-            }
-          }
-
-          .other-album-images {
-            position: relative;
-            flex-wrap: wrap;
-            float: right;
-            width: 50%;
-
-            img {
-              height: 50%;
-              width: 50%;
-              margin: 0;
-              &:hover {
-                box-shadow: -10px 10px 5px $loading;
-                z-index: 3;
-                transform: scale(1.05);
-              }
+          img {
+            max-width: 200px;
+            width: 20%;
+            &:hover {
+              box-shadow: -10px 10px 5px $loading;
+              z-index: 3;
+              transform: scale(1.05);
             }
           }
         }
