--- a/public/styles/partials/_bands.scss
+++ b/public/styles/partials/_bands.scss
@@ -45,18 +45,7 @@
   .band-container {
     background: $lightGrey;
     width: 100%;
-<<<<<<< HEAD
-    // border: 1px solid black;
-=======
->>>>>>> master
     flex-direction: column;
-    &:nth-of-type(even) {
-      background: $sky;
-    }
-    &:hover {
-      box-shadow: -10px 10px 5px $loading;
-      z-index: 2;
-    }
 
     &:nth-of-type(even) {
       background: $sky;
@@ -69,10 +58,7 @@
     img {
       width: 20%;
       height: 20%;
-<<<<<<< HEAD
-=======
       // padding: 5px;
->>>>>>> master
     }
     .display-name-container {
       flex-direction: column;
@@ -108,6 +94,7 @@
           background: $sky;
         }
 
+        //  box-shadow: 10px 10px 5px #888888;
         .band-members {
           padding-top: 2rem;
         }
@@ -127,26 +114,6 @@
 
         .album-image-container {
           flex-direction: row;
-<<<<<<< HEAD
-          // border: 1px solid black;
-          width: 100%;
-
-          .album-one-image {
-            position: relative;
-            float: left;
-            width: 50%;
-            margin: 0;
-
-            img {
-              height: 100%;
-              width: 100%;
-              margin: 0;
-              &:hover {
-                box-shadow: -10px 10px 5px $loading;
-                z-index: 3;
-                transform: scale(1.05);
-              }
-=======
           justify-content: center;
           padding: 1rem;
           width: 100%;
@@ -158,7 +125,6 @@
               box-shadow: -10px 10px 5px $loading;
               z-index: 3;
               transform: scale(1.05);
->>>>>>> master
             }
           }
         }
@@ -167,26 +133,6 @@
   }
 }
 
-<<<<<<< HEAD
-          .other-album-images {
-            position: relative;
-            flex-wrap: wrap;
-            float: right;
-            width: 50%;
-
-            img {
-              height: 50%;
-              width: 50%;
-              margin: 0;
-              &:hover {
-                box-shadow: -10px 10px 5px $loading;
-                z-index: 3;
-                transform: scale(1.05);
-
-              }
-            }
-          }
-=======
 .artist {
   .actions {
     button {
@@ -215,7 +161,6 @@
         &:active {
           background: $lightGrey;
           border: $slate;
->>>>>>> master
         }
       }
     }
