corrected styling for band list

--- a/styles/main.css
+++ b/styles/main.css
@@ -276,6 +276,7 @@ nav ul {
   align-items: center;
   border: 1px solid #303438;
   clear: both;
+  height: 300px;
   flex-direction: column;
   justify-content: space-between;
   margin: 0 auto;
@@ -306,7 +307,7 @@ nav ul {
     width: 100%;
     flex-direction: column; }
     .band-container-list .band-container:nth-of-type(even) {
-      background: #6991AC; }
+      background: #303438; }
     .band-container-list .band-container:hover {
       box-shadow: -10px 10px 5px rgba(0, 0, 0, 0.5);
       z-index: 2; }
@@ -336,7 +337,7 @@ nav ul {
         align-items: center;
         margin: 0; }
         .band-container-list .band-container .dropdown .bio-container:nth-of-type(odd) {
-          background: #6991AC; }
+          background: #303438; }
         .band-container-list .band-container .dropdown .bio-container .band-members {
           padding-top: 2rem; }
         .band-container-list .band-container .dropdown .bio-container .bio {
