--- a/styles/partials/_bands.scss
+++ b/styles/partials/_bands.scss
@@ -1,10 +1,9 @@
-
-
 .band-list-container {
   .add-band-form {
     align-items: center;
     border: 1px solid $slate;
     clear: both;
+    height: 300px;
     flex-direction: column;
     justify-content: space-between;
     margin: 0 auto;
@@ -49,7 +48,7 @@
     flex-direction: column;
 
     &:nth-of-type(even) {
-      background: $sky;
+      background: $slate;
     }
     &:hover {
       box-shadow: -10px 10px 5px $loading;
@@ -92,7 +91,7 @@
         align-items: center;
         margin: 0;
         &:nth-of-type(odd) {
-          background: $sky;
+          background: $slate;
         }
 
         //  box-shadow: 10px 10px 5px #888888;
